# SimplePDR

./: .gitignore  .travis.yml  CMakeLists.txt  IC3.cpp  IC3.h  Makefile  README.md  main.cpp  model.cpp  model.h  solver.cpp  solver.h  utils.cpp  utils.h
benchmarks/sample/: m1.vmt  m2.vmt  m3.vmt  m4.vmt  m5.vmt  m6.vmt  m7.vmt  m8.vmt
include/model/: model.h
include/parser/: parser.h  scanner.h
include/pdr/: IC3.h
include/solver/: solver.h
include/utils/: ast.h  utils.h
src/: main.cpp
src/model/: model.cpp
src/parser/: parser.cpp
src/parser/vmt/: lexer.l  parser.yy  vmt.l  vmt.y
src/pdr/: IC3.cpp
src/solver/: solver.cpp
src/utils/: ast.cpp  utils.cpp
